Fix homepage tabs on small screens

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -19,7 +19,6 @@ $p-small-lh-diff: map-get($line-heights, default-text) -
 @import "pattern_lists";
 @import "pattern_media-object";
 @import "pattern_strip";
-@import "pattern_tabs";
 @import "pattern_navigation";
 @import "pattern_search-panel";
 @import "pattern_careers-progression";
@@ -748,4 +747,11 @@ $p-small-lh-diff: map-get($line-heights, default-text) -
 
 .u-extra-space {
   margin-bottom: 4rem;
+}
+
+.p-tabs.is-home {
+  @media screen and (max-width: $breakpoint-small - 1) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
